--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <div class="cardSvg">
-        <svg width="50pt" height="50pt" viewBox="0 0 1100 1280" preserveAspectRatio="xMidYMid meet">
-            <g transform="translate(0,1280) scale(0.1,-0.1)" fill="#000000" stroke="none">
-                <path d="M5386 12707 c-231 -387 -542 -770 -1021 -1256 -327 -332 -529 -522
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Concentration</title>
+        <!-- google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="./assets/css/sanitize.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <!-- favicon -->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./assets/favicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./assets/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+        <link
+            rel="mask-icon"
+            href="./assets/favicon/safari-pinned-tab.svg"
+            color="#5bbad5"
+        />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
+    </head>
+    <body>
+        <header class="cardSvg">
+            <svg
+                width="50pt"
+                height="50pt"
+                viewBox="0 0 1100 1280"
+                preserveAspectRatio="xMidYMid meet"
+            >
+                <g
+                    transform="translate(0,1280) scale(0.1,-0.1)"
+                    fill="#000000"
+                    stroke="none"
+                >
+                    <path
+                        d="M5386 12707 c-231 -387 -542 -770 -1021 -1256 -327 -332 -529 -522
                 -1165 -1100 -300 -272 -639 -583 -755 -690 -824 -764 -1329 -1317 -1718 -1879
                 -388 -560 -615 -1097 -698 -1652 -30 -199 -33 -535 -7 -700 78 -481 301 -914
                 654 -1266 1014 -1009 2759 -1091 3884 -181 103 83 286 264 366 361 l41 50 -33
@@ -20,12 +64,23 @@
                 -258 542 -521 852 -678 1102 -554 2502 -363 3351 458 382 369 606 781 694
                 1276 32 182 32 511 -1 730 -83 555 -310 1092 -698 1652 -391 565 -894 1115
                 -1723 1884 -113 104 -450 413 -750 685 -638 580 -839 769 -1165 1100 -479 486
-                -790 869 -1021 1256 -27 46 -51 83 -54 83 -3 0 -27 -37 -54 -83z"/>
-            </g>
-        </svg>
-        <svg width="50pt" height="50pt" viewBox="0 0 1250 1280" preserveAspectRatio="xMidYMid meet">
-            <g transform="translate(0,1280) scale(0.1,-0.1)" fill="red" stroke="none">
-                <path d="M2885 12794 c-461 -46 -798 -140 -1150 -323 -865 -449 -1471 -1266
+                -790 869 -1021 1256 -27 46 -51 83 -54 83 -3 0 -27 -37 -54 -83z"
+                    />
+                </g>
+            </svg>
+            <svg
+                width="50pt"
+                height="50pt"
+                viewBox="0 0 1250 1280"
+                preserveAspectRatio="xMidYMid meet"
+            >
+                <g
+                    transform="translate(0,1280) scale(0.1,-0.1)"
+                    fill="red"
+                    stroke="none"
+                >
+                    <path
+                        d="M2885 12794 c-461 -46 -798 -140 -1150 -323 -865 -449 -1471 -1266
                 -1669 -2251 -48 -235 -61 -382 -60 -680 0 -304 14 -464 65 -765 196 -1142 825
                 -2312 2003 -3725 356 -427 616 -717 1581 -1765 740 -804 1063 -1171 1409
                 -1604 444 -554 759 -1025 1007 -1505 l87 -169 52 103 c271 541 657 1102 1216
@@ -34,12 +89,24 @@
                 -999 1779 -228 206 -438 348 -710 482 -382 188 -737 281 -1155 304 -860 46
                 -1683 -276 -2305 -905 -440 -444 -746 -1023 -874 -1652 -34 -167 -61 -368 -62
                 -469 -1 -85 -17 -57 -18 32 -1 93 -28 294 -62 459 -247 1211 -1150 2181 -2294
-                2465 -248 61 -399 81 -670 85 -121 2 -238 2 -260 0z"/>
-            </g>
-        </svg>
-        <svg width="50pt" height="50pt" viewBox="0 0 1238 1280" preserveAspectRatio="xMidYMid meet">
-            <g transform="translate(0,1280) scale(0.1,-0.1)" fill="red" stroke="none">
-                <path d="M6187 12610 c-3 -19 -11 -69 -17 -110 -17 -113 -84 -363 -134 -502
+                2465 -248 61 -399 81 -670 85 -121 2 -238 2 -260 0z"
+                    />
+                </g>
+            </svg>
+            <h2>Concentration</h2>
+            <svg
+                width="50pt"
+                height="50pt"
+                viewBox="0 0 1238 1280"
+                preserveAspectRatio="xMidYMid meet"
+            >
+                <g
+                    transform="translate(0,1280) scale(0.1,-0.1)"
+                    fill="red"
+                    stroke="none"
+                >
+                    <path
+                        d="M6187 12610 c-3 -19 -11 -69 -17 -110 -17 -113 -84 -363 -134 -502
                 -296 -816 -957 -1765 -1921 -2757 -1132 -1165 -2347 -2141 -3193 -2565 -268
                 -134 -532 -233 -691 -258 -80 -12 -90 -28 -18 -28 50 0 239 -42 357 -79 151
                 -47 235 -79 390 -149 919 -413 1958 -1277 3086 -2562 1104 -1260 1800 -2305
@@ -47,12 +114,23 @@
                 364 134 507 297 818 956 1764 1921 2757 846 871 1789 1681 2535 2176 326 217
                 609 376 882 496 131 57 374 136 466 151 81 12 92 28 19 28 -49 0 -238 41 -357
                 78 -678 210 -1471 727 -2320 1512 -828 766 -1889 2003 -2487 2900 -461 692
-                -745 1299 -806 1720 -3 22 -4 20 -10 -10z"/>
-            </g>
-        </svg>
-        <svg width="50pt" height="50pt" viewBox="0 0 1244 1280" preserveAspectRatio="xMidYMid meet">
-            <g transform="translate(0,1280) scale(0.1,-0.1)" fill="#000000" stroke="none">
-                <path d="M5957 12790 c-564 -55 -1076 -261 -1507 -607 -110 -88 -307 -285
+                -745 1299 -806 1720 -3 22 -4 20 -10 -10z"
+                    />
+                </g>
+            </svg>
+            <svg
+                width="50pt"
+                height="50pt"
+                viewBox="0 0 1244 1280"
+                preserveAspectRatio="xMidYMid meet"
+            >
+                <g
+                    transform="translate(0,1280) scale(0.1,-0.1)"
+                    fill="#000000"
+                    stroke="none"
+                >
+                    <path
+                        d="M5957 12790 c-564 -55 -1076 -261 -1507 -607 -110 -88 -307 -285
                 -394 -393 -169 -211 -333 -497 -421 -734 -260 -701 -200 -1504 160 -2146 139
                 -247 267 -412 517 -663 431 -434 715 -841 984 -1412 73 -154 198 -464 191
                 -471 -7 -7 -177 100 -307 194 -188 135 -320 246 -530 447 -362 347 -792 581
@@ -70,12 +148,15 @@
                 -244 -212 -376 -307 -119 -86 -260 -178 -265 -173 -2 2 20 66 49 143 150 395
                 360 799 582 1116 166 237 308 401 585 679 412 414 665 925 746 1507 20 144 22
                 487 4 623 -55 422 -192 794 -415 1130 -113 169 -198 273 -341 415 -420 420
-                -949 685 -1550 775 -158 24 -502 34 -648 20z"/>
-            </g>
-        </svg>
-    </div>
-    <!-- ここに生成されます -->
-    <table class="table"></table>
-    <script src="./assets/js/app.js"></script>
-</body>
+                -949 685 -1550 775 -158 24 -502 34 -648 20z"
+                    />
+                </g>
+            </svg>
+        </header>
+        <!-- ここに生成されます -->
+        <main class="cardTable">
+            <table class="table"></table>
+        </main>
+        <script src="./assets/js/app.js"></script>
+    </body>
 </html>
